--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
     "type": "module",
     "scripts": {
         "start": "node src/server.js",
-        "dev": "nodemon src/server.js"
+        "dev": "nodemon src/server.js",
+        "inspect-db": "node scripts/inspectDb.mjs"
     },
     "keywords": [],
     "author": "",
